# spirit

./: .gitignore  Cargo.toml  README.md  build.rs  frequencies.toml
.github/workflows/: ci.yml  release.yml
docs/: README.md  african-diaspora.md  ancient-civilizations.md  angels-spiritual-beings.md  audio-utilities.md  brainwave-entrainment.md  ceremonial-esoteric.md  chakras-energy-systems.md  healing-modalities.md  nature-elements.md  personal-development.md  planetary-cosmic.md  sacred-healing-tones.md  western-esoteric.md  world-spiritual-traditions.md
spirit/: __main__.py
src/: cli.rs  config.rs  frequency.rs  generator.rs  main.rs
src/frequency/: data.rs  mod.rs
