[package]
name = "spirit"
version = "0.1.0"
edition = "2021"
description = "Generate frequency-based audio files for meditation and exploration"

[dependencies]
hound = "3.5"
clap = { version = "4", features = ["derive"] }

[build-dependencies]
toml = "0.8"
serde = { version = "1", features = ["derive"] }
